[gd_scene load_steps=4 format=2]

[ext_resource path="res://Plant/PlantsSpritesheet.png" type="Texture" id=1]
[ext_resource path="res://Plant/Plant.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Plant" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlantSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, 2 )
hframes = 7
vframes = 12
frame = 10

[node name="GrowthTimer" type="Timer" parent="."]
autostart = true

[node name="RottingTimer" type="Timer" parent="."]
one_shot = true

[node name="PickingTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
[connection signal="timeout" from="RottingTimer" to="." method="_on_RottingTimer_timeout"]
[connection signal="timeout" from="PickingTimer" to="." method="_on_PickingTimer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
